compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_variable_decl_incompatible.snap
---
source: compiler/lume_typech/src/tests/check.rs
description: "fn foo() {\n        let _: Int32 = false;\n    }"
---
× error[LM4001]: mismatched types
   ╭───────────
 1 │ fn foo() {
 2 │         let _: Int32 = false;
   │                        ^^^^^ expected type Int32, but found type Boolean...
 3 │     }
   ∶ 
 1 │ fn foo() {
 2 │         let _: Int32 = false;
   │                ^^^^^ ...because of type defined here
 3 │     }
   ╰──
   help: expected type Int32
            found type Boolean
